# capstone25-t3-kch

./: .env.example  .gitignore  DEVELOPMENT_GUIDE.md  FINAL_TEST_CHECKLIST.md  QUICKSTART.md  README.md  TEST_GUIDE.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  youth_policy_backup.sql  youth_policy_backup_original.sql
backend/api-server/: .env.example  CRON_SETUP.md  EC2_배포_가이드.md  FIXES_SUMMARY.md  MIGRATION_GUIDE.md  POLICY_DESIGN.md  README.md  clear_db.py  create_tables.py  create_test_posts.py  database.py  eslint.config.js  fix_cron_thumbnail.sh  init_db.py  logging_config.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  schemas.py  settings.py  setup_cron.sh  tempCodeRunnerFile.py  test_update.sh  썸네일_생성_수정_가이드.md  크론잡_가이드.md
backend/api-server/data/: zip_prefix_regions.csv
backend/api-server/fixtures/: policies.json
backend/api-server/jobs/: thumbnail_refresh.py  update_policies.py
backend/api-server/jobs/blog/: __init__.py  add_view_count_column.sql  create_blog_table.sql  (+1 more)
backend/api-server/prompts_config/: blog_content_system_prompt.json  category_config.json  category_prompts.json  summary_system_prompt.json  title_system_prompt.json
backend/api-server/routers/: collect.py
backend/api-server/routes/: analytics.py  blogs.py  blogs_crud.py  policies.py  posts.py  prompts.py  recommendations.py  thumbnails.py  thumbnails_auto.py
backend/api-server/utils/: __init__.py  blog_utils.py  data_utils.py  llm_utils.py
(+109 files in other folders)
