[project]
name = "blog-api-server"
version = "0.1.0"
description = "Simple Blog API Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "openai>=2.1.0",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]==0.32.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
